DocImport 3.0.0
================================================================================
+ Rewritten with FOF 4
+ Renamed ViewTemplates to tmpl (Joomla 4 convention, with fallback code for Joomla 3)

DocImport 2.1.4
================================================================================
~ Add PHP 8.0 in the list of known PHP versions, recommend PHP 7.4 or later
# [HIGH] Joomla 4 beta 6 changed how sessions work, breaking everything
# [HIGH] FEF is missing from the installation package

DocImport  2.1.3
================================================================================
~ Replace zero datetime with nullable datetime (gh-26)
~ Update URLs to point to akeeba.com
~ Update CDN URL
~ PHP version warning can now handle "too new" PHP versions
~ Improved unhandled PHP exception error page

DocImport  2.1.2
================================================================================
+ Common PHP version warning scripts
+ Dark Mode
+ Joomla 4 compatibility
~ Implement Joomla! 4 routing. (gh-23)
# Smart Search plugin broken under Joomla 4
# Unhandled exception page was incompatible with Joomla 4

DocImport  2.1.1
================================================================================
# Partially reverted removal of Search feature, it's used in other features of our site

DocImport  2.1.0
================================================================================
- Removed the Search feature
~ Converted to use Akeeba FEF styling instead of Bootstrap 2 (gh-24)
# Categories with multiple, separate articles wouldn't show a list of articles

DocImport  2.0.7
================================================================================
~ Protection of all component and plugin folders against direct web access
~ Do not install when the XSL extension is missing
~ Do not try to process a category when the XSL extension is missing

DocImport  2.0.6
================================================================================