@@ -49,6 +49,7 @@
 			<folder>assets</folder>
 			<folder>Controller</folder>
 			<folder>Dispatcher</folder>
+			<folder>fields</folder>
 			<folder>Model</folder>
 			<folder>sql</folder>
 			<folder>tmpl</folder>
