@@ -5,138 +5,148 @@
   ~ @license   GNU General Public License version 3, or later
   -->
 
-<config>
-	<fieldset
-			name="basic"
-			label="COM_DOCIMPORT_CONFIG_BASIC_LABEL"
-			description="COM_DOCIMPORT_CONFIG_BASIC_DESC"
-			>
+<config addfieldpath="/administrator/components/com_docimport/fields">
+    <fieldset
+            name="basic"
+            label="COM_DOCIMPORT_CONFIG_BASIC_LABEL"
+            description="COM_DOCIMPORT_CONFIG_BASIC_DESC"
+    >
 
-		<field name="mediaroot" type="text" default="com_docimport/books"
-			   label="COM_DOCIMPORT_CONFIG_MEDIAROOT_LABEL"
-			   description="COM_DOCIMPORT_CONFIG_MEDIAROOT_DESC"
-		/>
+        <field name="mediaroot"
+               type="text"
+               default="com_docimport/books"
+               label="COM_DOCIMPORT_CONFIG_MEDIAROOT_LABEL"
+               description="COM_DOCIMPORT_CONFIG_MEDIAROOT_DESC"
+        />
 
-		<field name="load_fef" type="list" default="3"
-			   label="COM_DOCIMPORT_CONFIG_BACKEND_LOAD_FEF"
-			   description="COM_DOCIMPORT_CONFIG_BACKEND_LOAD_FEF_DESC">
-			<option value="0">COM_DOCIMPORT_CONFIG_BACKEND_LOAD_FEF_NEVER</option>
-			<option value="1">COM_DOCIMPORT_CONFIG_BACKEND_LOAD_FEF_FRONTEND</option>
-			<option value="2">COM_DOCIMPORT_CONFIG_BACKEND_LOAD_FEF_BACKEND</option>
-			<option value="3">COM_DOCIMPORT_CONFIG_BACKEND_LOAD_FEF_BOTH</option>
-		</field>
+        <field name="load_fef"
+               type="list"
+               default="3"
+               label="COM_DOCIMPORT_CONFIG_BACKEND_LOAD_FEF"
+               description="COM_DOCIMPORT_CONFIG_BACKEND_LOAD_FEF_DESC">
+            <option value="0">COM_DOCIMPORT_CONFIG_BACKEND_LOAD_FEF_NEVER</option>
+            <option value="1">COM_DOCIMPORT_CONFIG_BACKEND_LOAD_FEF_FRONTEND</option>
+            <option value="2">COM_DOCIMPORT_CONFIG_BACKEND_LOAD_FEF_BACKEND</option>
+            <option value="3">COM_DOCIMPORT_CONFIG_BACKEND_LOAD_FEF_BOTH</option>
+        </field>
 
-		<field name="fef_reset" type="list" default="3"
-			   label="COM_DOCIMPORT_CONFIG_BACKEND_FEF_RESET"
-			   description="COM_DOCIMPORT_CONFIG_BACKEND_FEF_RESET_DESC">
-			<option value="0">COM_DOCIMPORT_CONFIG_BACKEND_LOAD_FEF_NEVER</option>
-			<option value="1">COM_DOCIMPORT_CONFIG_BACKEND_LOAD_FEF_FRONTEND</option>
-			<option value="2">COM_DOCIMPORT_CONFIG_BACKEND_LOAD_FEF_BACKEND</option>
-			<option value="3">COM_DOCIMPORT_CONFIG_BACKEND_LOAD_FEF_BOTH</option>
-		</field>
+        <field name="fef_reset"
+               type="list"
+               default="3"
+               label="COM_DOCIMPORT_CONFIG_BACKEND_FEF_RESET"
+               description="COM_DOCIMPORT_CONFIG_BACKEND_FEF_RESET_DESC">
+            <option value="0">COM_DOCIMPORT_CONFIG_BACKEND_LOAD_FEF_NEVER</option>
+            <option value="1">COM_DOCIMPORT_CONFIG_BACKEND_LOAD_FEF_FRONTEND</option>
+            <option value="2">COM_DOCIMPORT_CONFIG_BACKEND_LOAD_FEF_BACKEND</option>
+            <option value="3">COM_DOCIMPORT_CONFIG_BACKEND_LOAD_FEF_BOTH</option>
+        </field>
 
-		<field name="dark_mode_backend" type="radio" default="-1"
-			   label="COM_DOCIMPORT_CONFIG_BACKEND_DARKMODE_BACKEND_LABEL"
-			   description="COM_DOCIMPORT_CONFIG_BACKEND_DARKMODE_BACKEND_DESC"
-			   class="switcher btn-group">
-			<option value="-1">COM_DOCIMPORT_CONFIG_BACKEND_DARKMODE_AUTO</option>
-			<option value="0">COM_DOCIMPORT_CONFIG_BACKEND_DARKMODE_NEVER</option>
-			<option value="1">COM_DOCIMPORT_CONFIG_BACKEND_DARKMODE_ALWAYS</option>
-		</field>
+        <field name="dark_mode_backend"
+               type="list"
+               default="-1"
+               label="COM_DOCIMPORT_CONFIG_BACKEND_DARKMODE_BACKEND_LABEL"
+               description="COM_DOCIMPORT_CONFIG_BACKEND_DARKMODE_BACKEND_DESC"
+        >
+            <option value="-1">COM_DOCIMPORT_CONFIG_BACKEND_DARKMODE_AUTO</option>
+            <option value="0">COM_DOCIMPORT_CONFIG_BACKEND_DARKMODE_NEVER</option>
+            <option value="1">COM_DOCIMPORT_CONFIG_BACKEND_DARKMODE_ALWAYS</option>
+        </field>
 
-		<field name="dark_mode_frontend" type="radio" default="-1"
-			   label="COM_DOCIMPORT_CONFIG_BACKEND_DARKMODE_FRONTEND_LABEL"
-			   description="COM_DOCIMPORT_CONFIG_BACKEND_DARKMODE_FRONTEND_DESC"
-			   class="switcher btn-group">
-			<option value="-1">COM_DOCIMPORT_CONFIG_BACKEND_DARKMODE_AUTO</option>
-			<option value="0">COM_DOCIMPORT_CONFIG_BACKEND_DARKMODE_NEVER</option>
-			<option value="1">COM_DOCIMPORT_CONFIG_BACKEND_DARKMODE_ALWAYS</option>
-		</field>
+        <field name="dark_mode_frontend"
+               type="list"
+               default="-1"
+               label="COM_DOCIMPORT_CONFIG_BACKEND_DARKMODE_FRONTEND_LABEL"
+               description="COM_DOCIMPORT_CONFIG_BACKEND_DARKMODE_FRONTEND_DESC"
+        >
+            <option value="-1">COM_DOCIMPORT_CONFIG_BACKEND_DARKMODE_AUTO</option>
+            <option value="0">COM_DOCIMPORT_CONFIG_BACKEND_DARKMODE_NEVER</option>
+            <option value="1">COM_DOCIMPORT_CONFIG_BACKEND_DARKMODE_ALWAYS</option>
+        </field>
 
-		<field name="siteurl" type="hidden" default=""
-			   label="" />
-		<field name="sitepath" type="hidden" default=""
-			   label="" />
-	</fieldset>
+        <field name="siteurl" type="hidden" default=""
+               label=""/>
+        <field name="sitepath" type="hidden" default=""
+               label=""/>
+    </fieldset>
 
-	<fieldset
-			name="unisearch"
-			label="COM_DOCIMPORT_CONFIG_UNISEARCH_LABEL"
-			description="COM_DOCIMPORT_CONFIG_UNISEARCH_DESC"
-	>
-		<field name="search_areas"
-			   type="repeatable"
-			   icon="list"
-			   label="COM_DOCIMPORT_CONFIG_SEARCHAREAS_LABEL"
-			   description="COM_DOCIMPORT_CONFIG_SEARCHAREAS_DESC"
-			   default="">
-				<field name="title"
-					   label="COM_DOCIMPORT_CONFIG_SEARCHAREAS_TITLE_LABEL"
-					   size="30"
-					   type="text" />
+    <fieldset
+            name="unisearch"
+            label="COM_DOCIMPORT_CONFIG_UNISEARCH_LABEL"
+            description="COM_DOCIMPORT_CONFIG_UNISEARCH_DESC"
+    >
+        <field name="search_areas"
+               type="repeatable"
+               icon="list"
+               label="COM_DOCIMPORT_CONFIG_SEARCHAREAS_LABEL"
+               description="COM_DOCIMPORT_CONFIG_SEARCHAREAS_DESC"
+               default="">
+            <field name="title"
+                   label="COM_DOCIMPORT_CONFIG_SEARCHAREAS_TITLE_LABEL"
+                   size="30"
+                   type="text"/>
 
-				<field name="slug"
-					   label="COM_DOCIMPORT_CONFIG_SEARCHAREAS_SLUG_LABEL"
-					   size="30"
-					   type="text" />
+            <field name="slug"
+                   label="COM_DOCIMPORT_CONFIG_SEARCHAREAS_SLUG_LABEL"
+                   size="30"
+                   type="text"/>
 
-				<field
-						name="jcat"
-						type="category"
-						extension="com_content"
-						multiple="true"
-						size="10"
-						default=""
-						label="COM_DOCIMPORT_CONFIG_SEARCHAREAS_JCAT_LABEL"
-				/>
+            <field
+                    name="jcat"
+                    type="category"
+                    extension="com_content"
+                    multiple="true"
+                    size="10"
+                    default=""
+                    label="COM_DOCIMPORT_CONFIG_SEARCHAREAS_JCAT_LABEL"
+            />
 
-				<field
-						name="dicat"
-						type="sql"
-						default=""
-						multiple="true"
-						label="COM_DOCIMPORT_CONFIG_SEARCHAREAS_DICAT_LABEL"
-						query="SELECT `docimport_category_id` as `id`, `title` FROM `#__docimport_categories` ORDER BY `ordering`,`title` ASC"
-						key_field="id"
-						value_field="title"
-				/>
+            <field
+                    name="dicat"
+                    type="sql"
+                    default=""
+                    multiple="true"
+                    label="COM_DOCIMPORT_CONFIG_SEARCHAREAS_DICAT_LABEL"
+                    query="SELECT `docimport_category_id` as `id`, `title` FROM `#__docimport_categories` ORDER BY `ordering`,`title` ASC"
+                    key_field="id"
+                    value_field="title"
+            />
 
-				<field
-						name="atscat"
-						type="category"
-						extension="COM_DOCIMPORT"
-						multiple="true"
-						size="10"
-						default=""
-						label="COM_DOCIMPORT_CONFIG_SEARCHAREAS_ATSCAT_LABEL"
-				/>
-		</field>
+            <field
+                    name="atscat"
+                    type="category"
+                    extension="COM_DOCIMPORT"
+                    multiple="true"
+                    size="10"
+                    default=""
+                    label="COM_DOCIMPORT_CONFIG_SEARCHAREAS_ATSCAT_LABEL"
+            />
+        </field>
 
-		<field name="force_menuid"
-			   type="Menuitem"
-			   published="1"
-			   label="COM_DOCIMPORT_CONFIG_FORCEMENU_LABEL"
-			   description="COM_DOCIMPORT_CONFIG_FORCEMENU_DESC"
-			   default=""
-		>
-			<option value="">––––</option>
-		</field>
-	</fieldset>
+        <field name="force_menuid"
+               type="Menuitem"
+               published="1"
+               label="COM_DOCIMPORT_CONFIG_FORCEMENU_LABEL"
+               description="COM_DOCIMPORT_CONFIG_FORCEMENU_DESC"
+               default=""
+        >
+            <option value="">––––</option>
+        </field>
+    </fieldset>
 
-	<fieldset
-			name="permissions"
-			label="JCONFIG_PERMISSIONS_LABEL"
-			description="JCONFIG_PERMISSIONS_DESC"
-	>
+    <fieldset
+            name="permissions"
+            label="JCONFIG_PERMISSIONS_LABEL"
+            description="JCONFIG_PERMISSIONS_DESC"
+    >
 
-		<field
-				name="rules"
-				type="rules"
-				label="JCONFIG_PERMISSIONS_LABEL"
-				class="inputbox"
-				filter="rules"
-				component="com_akeebasubs"
-				section="component" />
-	</fieldset>
+        <field
+                name="rules"
+                type="rules"
+                label="JCONFIG_PERMISSIONS_LABEL"
+                class="inputbox"
+                filter="rules"
+                component="com_akeebasubs"
+                section="component"/>
+    </fieldset>
 
 </config>
